--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,5 +30,5 @@ readme = {file = ["README.md"], content-type = "text/markdown"}
 line-length = 80
 
 [build-system]
-requires = ["setuptools", "setuptools-scm", "wheel"]
+requires = ["setuptools>=80", "setuptools-scm[simple]>=8", "wheel"]
 build-backend = "setuptools.build_meta"
