--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,30 @@ pytest = [
 ]
 lint = ["black"]
 profile = ["snakeviz~=2.2"]
+type = [
+    "types-PyYAML",
+    "mypy"
+]
 
-debug = ["epdb"]
 
+
+[tool.tox]
+requires = ["tox~=4.28"]
+extras = ["pytest"]
+env_list = ["3.13", "3.14", "3.15", "type"]
+
+[tool.tox.env_run_base]
+description = "Run test under {base_python}"
+extras = ["pytest"]
+commands = [["pytest"]]
+
+[tool.tox.env.type]
+description = "run type check on code base"
+extras = ["type"]
+commands = [["mypy", "src/dandy_lib/testing.py", "src/dandy_lib/datatypes/numeric.py", "src/dandy_lib/datatypes/twodee.py"], ["mypy", "tests"]]
+
+[tool.setuptools.package-data]
+dandy_lib = ["py.typed"]
 
 [tool.setuptools.dynamic]
 readme = {file = ["README.md"], content-type = "text/markdown"}
