--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,9 @@ env_list = ["3.13", "3.13-type", "3.13-black", "3.14", "3.15", "3.15-type", "3.1
 
 [gh-actions]
 python =
-    3.13: "3.13", "3.13-type", "3.13-black"
-    3.14: "3.14"
-    3.15: "3.15", "3.15-type", "3.15-black" 
+    3.13.8: "3.13", "3.13-type", "3.13-black"
+    3.14.0: "3.14"
+    3.15.0-alpha.1: "3.15", "3.15-type", "3.15-black" 
 
 [tool.tox.env_run_base]
 description = "Run test under {base_python}"
