--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.13', '3.14', '3.15']
+        python-version: ['3.13', '3.14', '3.15.0-alpha1']
 
     steps:
     - uses: actions/checkout@v5
