--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,12 @@ type = [
 [tool.tox]
 requires = ["tox~=4.28"]
 extras = ["pytest"]
-env_list = ["3.13", "3.13-type", "3.13-black", "3.14", "3.15", "3.15-type", "3.15-black"]
+env_list = ["3.13", "3.14", "3.15", "type", "black"]
 
 [gh-actions]
 python = """
-    3.13.8: "3.13", "3.13-type", "3.13-black"
-    3.14.0: "3.14", "3.14-type", "3.14-black"
+    3.13: "3.13", "type", "black"
+    3.14: "3.14", "type", "black"
     """
 
 [tool.tox.env_run_base]
