--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,7 @@ env_list = ["3.13", "3.14", "3.15", "type", "black"]
 
 [gh-actions]
 python = """
-    3.13: "3.13", "type", "black"
-    3.14: "3.14", "type", "black"
+    3: "py3", "type", "black"
     """
 
 [tool.tox.env_run_base]
