--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,9 @@ env_list = ["3.13", "3.14", "3.15", "type", "black"]
 
 [gh-actions]
 python = """
-    3: "py3", "type", "black"
+
+    3.13: "py313", "type", "lint"
+    3.14: "py314", "type", "lint"
     """
 
 [tool.tox.env_run_base]
