--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,21 +26,16 @@ type = [
 
 
 [tool.tox]
-requires = ["tox~=4.28"]
+requires = ["tox~=4.28", "virtualenv-pyenv"]
 extras = ["pytest"]
 env_list = ["3.13", "3.14", "3.15", "type", "black"]
-
-[gh-actions]
-python = """
-
-    3.13: "py313", "type", "lint"
-    3.14: "py314", "type", "lint"
-    """
 
 [tool.tox.env_run_base]
 description = "Run test under {base_python}"
 extras = ["pytest"]
 commands = [["pytest"]]
+[tool.tox.env_run_base.set_env]
+VIRTUALENV_DISCOVERY = "pyenv"
 
 [tool.tox.env.type]
 description = "run type check on code base"
