--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ type = [
 [tool.tox]
 requires = ["tox~=4.28", "virtualenv-pyenv"]
 extras = ["pytest"]
-env_list = ["3.13", "3.14", "3.15", "type", "black"]
+env_list = ["3.13", "3.14", "3.15", "type", "lint"]
 
 [tool.tox.env_run_base]
 description = "Run test under {base_python}"
