--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -22,4 +22,4 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install tox tox-gh-actions
     - name: Test with tox
-      run: tox r -e ${{ matrix.python-version }} lint type
+      run: tox r -e ${{ matrix.python-version }},lint,type
