--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dandy_lib"
 dynamic = ["version", "readme"]
 description = "Libraries that Dandelion built"
 requires-python = "~=3.13"
-license = {file="LICENSE.md"}
+license = "GPL-3.0-only"
 authors = [{name="Dandelion Good", email = "dandeliongood@proton.me"}]
 
 dependencies = [
@@ -26,15 +26,21 @@ type = [
 
 
 [tool.tox]
-requires = ["tox~=4.28", "virtualenv-pyenv"]
+requires = ["tox~=4.28"]
 extras = ["pytest"]
 env_list = ["3.13", "3.14", "3.15", "type", "lint"]
+
 
 [tool.tox.env_run_base]
 description = "Run test under {base_python}"
 extras = ["pytest"]
 commands = [["pytest"]]
 [tool.tox.env_run_base.set_env]
+
+[tool.tox.env.pyenv]
+requires = ["virtualenv-pyenv"]
+commands = [["pytest"]]
+[tool.tox.env.pyenv.set_env]
 VIRTUALENV_DISCOVERY = "pyenv"
 
 [tool.tox.env.type]
@@ -53,6 +59,8 @@ dandy_lib = ["py.typed"]
 
 [tool.setuptools.dynamic]
 readme = {file = ["README.md"], content-type = "text/markdown"}
+
+[tool.setuptools_scm]
 
 [tool.black]
 line-length = 80
