--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,16 @@ name = "dandy_lib"
 dynamic = ["version", "readme"]
 description = "Libraries that Dandelion built"
 requires-python = "~=3.13"
-license = {file="LICENSE.md"}
+license = "GPL-3.0-only"
 authors = [{name="Dandelion Good", email = "dandeliongood@proton.me"}]
 
 dependencies = [
-    "pyyaml"
+    "pyyaml~=6.0"
 ]
 
 [project.optional-dependencies]
-test = ["tox"]
+test = ["tox~=4.28"]
+tooling = ["pre-commit~=4.3"]
 pytest = [
     "pytest-cov",
     "pytest",
@@ -19,12 +20,48 @@ pytest = [
 ]
 lint = ["black"]
 profile = ["snakeviz~=2.2"]
+type = [
+    "types-PyYAML~=6.0",
+    "mypy~=1.18"
+]
 
-debug = ["epdb"]
 
+[tool.tox]
+requires = ["tox~=4.28"]
+extras = ["pytest"]
+env_list = ["3.13", "3.14", "3.15", "type", "lint"]
+
+
+[tool.tox.env_run_base]
+description = "Run test under {base_python}"
+extras = ["pytest"]
+commands = [["pytest"]]
+[tool.tox.env_run_base.set_env]
+
+[tool.tox.env.pyenv]
+requires = ["virtualenv-pyenv"]
+commands = [["pytest"]]
+[tool.tox.env.pyenv.set_env]
+VIRTUALENV_DISCOVERY = "pyenv"
+
+[tool.tox.env.type]
+description = "run type check on code base"
+extras = ["type"]
+commands = [["mypy", "src/dandy_lib/testing.py", "src/dandy_lib/datatypes/numeric.py", "src/dandy_lib/datatypes/twodee.py"], ["mypy", "tests"]]
+
+
+[tool.tox.env.lint]
+description = "Run linting on code base"
+extras = ["lint"]
+commands = [["black", "src"], ["black", "tests"]]
+
+[tool.setuptools.package-data]
+dandy_lib = ["py.typed"]
 
 [tool.setuptools.dynamic]
 readme = {file = ["README.md"], content-type = "text/markdown"}
+
+[tool.setuptools_scm]
 
 [tool.black]
 line-length = 80
