--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,12 @@ env_list = ["3.13", "3.14", "3.15", "type", "lint"]
 [tool.tox.env_run_base]
 description = "Run test under {base_python}"
 extras = ["pytest"]
-commands = [["pytest"]]
+commands = [["pytest", { replace = "posargs", default = [], extend = true } ]]
 [tool.tox.env_run_base.set_env]
 
 [tool.tox.env.pyenv]
 requires = ["virtualenv-pyenv"]
-commands = [["pytest"]]
+commands = [["pytest", { replace = "posargs", default = [], extend = true } ]]
 [tool.tox.env.pyenv.set_env]
 VIRTUALENV_DISCOVERY = "pyenv"
 
