--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,18 +14,19 @@ dependencies = [
 test = ["tox~=4.28"]
 tooling = ["pre-commit~=4.3"]
 pytest = [
-    "pytest-cov",
-    "pytest",
-    "pytest-xdist"
+    "pytest-cov~=7.0",
+    "pytest~=9.0",
+    "pytest-xdist~=3.8"
 ]
 lint = ["black"]
 profile = ["snakeviz~=2.2"]
 type = [
     "types-PyYAML~=6.0",
+    "pytest-mypy~=1.0",
     "mypy~=1.18"
 ]
 clean = [
-    "coverage"
+    "coverage~=7.12"
 ]
 
 
