--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
       args: [--line-length=80]
       language_version: python3.14
 
--   repo: https://github.com/asottile/reorder-python-imports
-    rev: v3.16.0
-    hooks:
-    -   id: reorder-python-imports
+#-   repo: https://github.com/asottile/reorder-python-imports
+#    rev: v3.16.0
+#    hooks:
+#    -   id: reorder-python-imports
