--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "GPL-3.0-only"
 authors = [{name="Dandelion Good", email = "dandeliongood@proton.me"}]
 
 dependencies = [
+    "annotated-types~=0.7.0",
     "pyyaml~=6.0"
 ]
 
@@ -37,7 +38,7 @@ clean = [
 
 
 [tool.tox]
-requires = ["tox~=4.28"]
+requires = ["tox~=4.28", "virtualenv-pyenv"]
 extras = ["pytest"]
 env_list = ["clean", "3.13", "3.14", "3.15", "type", "lint"]
 
@@ -47,6 +48,8 @@ description = "Run test under {base_python}"
 extras = ["pytest"]
 commands = [["pytest", "--cov=dandy_lib", "--cov-append", "--cov-report=term-missing", { replace = "posargs", default = ["-vv"], extend = true } ]]
 [tool.tox.env_run_base.set_env]
+VIRTUALENV_DISCOVERY = "pyenv"
+
 
 [tool.tox.env.clean]
 skip_install = true
