--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ["tox~=4.28"]
+test = ["tox~=4.28", "virtualenv-pyenv~=0.6"]
 tooling = [
     "pre-commit~=4.3",
     "reorder-python-imports~=3.16",
